smten/share/lib/Smten/Tests/ShouldFail/FreeDataCon.smtn

module Smten.Tests.ShouldFail.FreeDataCon where

-- The data constructor Sludge.
bar :: Bool
bar = Sludge

